--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
       </div>
       </section>
-      <section class="section-size">
+      <section class="developer-example">
         <div class="container">
         <h2 class="developer-heading">Чим ми займаємось</h2>
         <ul class="developer-list list">
@@ -113,29 +113,37 @@
         </ul>
       </div>
       </section>
-      <section class="team section-size">
+      <section class="team ">
         <div class="container">
         <h2 class="team-header">Наша команда</h2>
         <ul class="list team-list">
           <li class="team-item">
             <img src="./image/img1.jpg" alt="Ігор Демяненко" width="270" />
+            <div class="team-caption">
             <h3 class="team-heading">Ігор Дем'яненко</h3>
             <p class="team-paragraph">Product Designer</p>
+          </div>
           </li>
           <li class="team-item">
             <img src="./image/img2.jpg" alt="Ольга Репіна" width="270" />
+            <div class="team-caption">
             <h3 class="team-heading">Ольга Репіна</h3>
             <p class="team-paragraph">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-item">
             <img src="./image/img3.jpg" alt="Микола Тарасов" width="270" />
+            <div class="team-caption">
             <h3 class="team-heading">Микола Тарасов</h3>
             <p class="team-paragraph">Marketing</p>
+          </div>
           </li>
           <li class="team-item">
             <img src="./image/img4.jpg" alt="Михайло Єрмаков" width="270" />
+            <div class="team-caption">
             <h3 class="team-heading">Михайло Єрмаков</h3>
             <p class="team-paragraph">UI Designer</p>
+          </div>
           </li>
         </ul>
       </div>
