--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header-portfolio">
       <div class="container">
         <a class="logo link" href="/">Web<span>Studio</span></a>
         <nav class="header-logo">
@@ -49,6 +49,7 @@
             </li>
           </ul>
         </div>
+
       </div>
     </header>
     <main>
@@ -140,34 +141,32 @@
         </div>
       </section>
     </main>
-    <footer id="footer">
-      <div class="container footer-list">
-        <a href="./index.html" class="logo-footer logo link"
-          >Web<span>Studio</span></a
-        >
-        <address>
-          <ul class="list footer-adress">
-            <li>
-              <a
-                href="https://goo.gl/maps/T8n9MHEeojXx5YYr6"
-                target="_blank"
-                class="address-link link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-mail link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-number link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+    <footer class="footer-list" id="footer">
+      <div class="container">
+        <div class="footer-logo">
+      <a href="./index.html" class="logo-footer link">Web<span>Studio</span></a>
+    </div>
+      <address>
+        <ul class="list footer-adress">
+          <li class="footer-item">
+            <a 
+              href="https://goo.gl/maps/T8n9MHEeojXx5YYr6" 
+              target="_blank"
+              class="address-link link"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
     </footer>
   </body>
 </html>
