--- a/index.html
+++ b/index.html
@@ -151,10 +151,12 @@
     </main>
     <footer class="footer-list" id="footer">
       <div class="container">
-      <a href="./index.html" class="logo-footer logo link">Web<span>Studio</span></a>
+        <div class="footer-logo">
+      <a href="./index.html" class="logo-footer link">Web<span>Studio</span></a>
+    </div>
       <address>
         <ul class="list footer-adress">
-          <li >
+          <li class="footer-item">
             <a 
               href="https://goo.gl/maps/T8n9MHEeojXx5YYr6" 
               target="_blank"
@@ -162,13 +164,13 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-mail link"
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-number link">+38 096 111 11 11</a>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
