--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button type="button" class="main-btn">Замовити послугу</button>
       </div>
       </section>
-      <section class="section-benefits section-size">
+      <section class="section-benefits ">
         <div class="container ">
         <ul class="list benefits">
           <li class="benefits-item">
